segundo envio ao repositorio do github

--- a/css/sobre.css
+++ b/css/sobre.css
@@ -6,12 +6,13 @@ body {
     color: #3D3D3D;
 }
 
-h1 {
+.titulo {
     padding: 10px;
+    font-size: 32px;
     background-color: #E1EDF2;
 }
 
-h2 {
+.subtitulo {
     border-bottom: 2px solid black;
 }
 
@@ -27,3 +28,19 @@ figure {
 figcaption {
     margin-top: 10px;
 }
+
+.matriz-musicdot {
+    width: 550px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.familia-tupfeln {
+    width: 275px;
+    float: right;
+}
+
+figure img {
+    width: 100%;
+}
+
